// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Chord Progression test suite should generate chords based on a movement timeline - free rhythm 1`] = `
Array [
  Object {
    "chord": Array [
      66,
      69,
      73,
    ],
    "chordName": "F#m",
    "dur": 480,
    "isRest": false,
    "next": 480,
    "time": 0,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "isRest": true,
    "next": 480,
    "time": 480,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
    ],
    "chordName": "F#m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 960,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 160,
    "isRest": true,
    "next": 160,
    "time": 1280,
  },
  Object {
    "chord": Array [
      66,
      73,
      71,
    ],
    "chordName": "F#sus4",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 1440,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 320,
    "isRest": true,
    "next": 320,
    "time": 1760,
  },
  Object {
    "chord": Array [
      66,
      73,
      71,
    ],
    "chordName": "F#sus4",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 2080,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 160,
    "isRest": true,
    "next": 160,
    "time": 2400,
  },
  Object {
    "chord": Array [
      66,
      73,
      71,
    ],
    "chordName": "F#sus4",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 2560,
  },
  Object {
    "chord": Array [
      68,
      73,
      74,
    ],
    "chordName": "C#",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 2880,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 320,
    "isRest": true,
    "next": 320,
    "time": 3200,
  },
  Object {
    "chord": Array [
      68,
      73,
      74,
    ],
    "chordName": "C#",
    "dur": 480,
    "isRest": false,
    "next": 320,
    "time": 3520,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
      74,
    ],
    "chordName": "F#m6m",
    "dur": 480,
    "isRest": false,
    "next": 480,
    "time": 3840,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 160,
    "isRest": true,
    "next": 160,
    "time": 4320,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
      74,
    ],
    "chordName": "F#m6m",
    "dur": 480,
    "isRest": false,
    "next": 480,
    "time": 4480,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
      74,
    ],
    "chordName": "F#m6m",
    "dur": 480,
    "isRest": false,
    "next": 320,
    "time": 4960,
  },
  Object {
    "chord": Array [
      64,
      69,
      72,
    ],
    "chordName": "Am",
    "dur": 480,
    "isRest": false,
    "next": 480,
    "time": 5280,
  },
  Object {
    "chord": Array [
      64,
      69,
      72,
    ],
    "chordName": "Am",
    "dur": 480,
    "isRest": false,
    "next": 480,
    "time": 5760,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "isRest": true,
    "next": 480,
    "time": 6240,
  },
  Object {
    "chord": Array [
      65,
      69,
      74,
    ],
    "chordName": "Dm",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 6720,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 160,
    "isRest": true,
    "next": 160,
    "time": 7040,
  },
  Object {
    "chord": Array [
      65,
      69,
      74,
    ],
    "chordName": "Dm",
    "dur": 480,
    "isRest": false,
    "next": 480,
    "time": 7200,
  },
]
`;

exports[`A Chord Progression test suite should generate chords based on a movement timeline - turn rhythm 1`] = `
Array [
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 240,
    "isRest": true,
    "next": 240,
    "time": 0,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
    ],
    "chordName": "F#m",
    "dur": 240,
    "isRest": false,
    "next": 240,
    "time": 240,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 240,
    "isRest": true,
    "next": 240,
    "time": 480,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
    ],
    "chordName": "F#m",
    "dur": 720,
    "isRest": false,
    "next": 720,
    "time": 720,
  },
  Object {
    "chord": Array [
      66,
      71,
      73,
    ],
    "chordName": "F#sus4",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 1440,
  },
  Object {
    "chord": Array [
      66,
      71,
      73,
    ],
    "chordName": "F#sus4",
    "dur": 480,
    "isRest": false,
    "next": 480,
    "time": 1760,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 320,
    "isRest": true,
    "next": 320,
    "time": 2240,
  },
  Object {
    "chord": Array [
      66,
      71,
      73,
    ],
    "chordName": "F#sus4",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 2560,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
      71,
    ],
    "chordName": "C#m7",
    "dur": 240,
    "isRest": false,
    "next": 240,
    "time": 2880,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
      71,
    ],
    "chordName": "C#m7",
    "dur": 240,
    "isRest": false,
    "next": 240,
    "time": 3120,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "isRest": true,
    "next": 480,
    "time": 3360,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
      76,
    ],
    "chordName": "F#m7",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 3840,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
      76,
    ],
    "chordName": "F#m7",
    "dur": 480,
    "isRest": false,
    "next": 480,
    "time": 4160,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
      76,
    ],
    "chordName": "F#m7",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 4640,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 320,
    "isRest": true,
    "next": 320,
    "time": 4960,
  },
  Object {
    "chord": Array [
      64,
      69,
      74,
    ],
    "chordName": "Asus4",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 5280,
  },
  Object {
    "chord": Array [
      64,
      69,
      74,
    ],
    "chordName": "Asus4",
    "dur": 480,
    "isRest": false,
    "next": 480,
    "time": 5600,
  },
  Object {
    "chord": Array [
      64,
      69,
      74,
    ],
    "chordName": "Asus4",
    "dur": 480,
    "isRest": false,
    "next": 480,
    "time": 6080,
  },
  Object {
    "chord": Array [
      64,
      69,
      74,
    ],
    "chordName": "Asus4",
    "dur": 160,
    "isRest": false,
    "next": 160,
    "time": 6560,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 240,
    "isRest": true,
    "next": 240,
    "time": 6720,
  },
  Object {
    "chord": Array [
      62,
      67,
      69,
    ],
    "chordName": "Dsus4",
    "dur": 240,
    "isRest": false,
    "next": 240,
    "time": 6960,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "isRest": true,
    "next": 480,
    "time": 7200,
  },
]
`;

exports[`A Chord Progression test suite should generate progression with defined structures 1`] = `
Array [
  Object {
    "chord": Array [
      53,
      56,
      60,
      61,
      65,
      68,
      72,
      73,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 0,
  },
  Object {
    "chord": Array [
      53,
      56,
      60,
      61,
      65,
      68,
      72,
      73,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 320,
  },
  Object {
    "chord": Array [
      53,
      56,
      60,
      61,
      65,
      68,
      72,
      73,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 640,
  },
  Object {
    "chord": Array [
      54,
      58,
      61,
      63,
    ],
    "chordName": "Gb6",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 960,
  },
  Object {
    "chord": Array [
      54,
      58,
      61,
      63,
    ],
    "chordName": "Gb6",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 1280,
  },
  Object {
    "chord": Array [
      54,
      58,
      61,
      63,
    ],
    "chordName": "Gb6",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 1600,
  },
  Object {
    "chord": Array [
      82,
      85,
      89,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 1920,
  },
  Object {
    "chord": Array [
      82,
      85,
      89,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 2240,
  },
  Object {
    "chord": Array [
      82,
      85,
      89,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 2560,
  },
  Object {
    "chord": Array [
      49,
      56,
    ],
    "chordName": "Db6",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 2880,
  },
  Object {
    "chord": Array [
      49,
      56,
    ],
    "chordName": "Db6",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 3200,
  },
  Object {
    "chord": Array [
      49,
      56,
    ],
    "chordName": "Db6",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 3520,
  },
  Object {
    "chord": Array [
      48,
      49,
      53,
      56,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 3840,
  },
  Object {
    "chord": Array [
      48,
      49,
      53,
      56,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 4160,
  },
  Object {
    "chord": Array [
      48,
      49,
      53,
      56,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 4480,
  },
  Object {
    "chord": Array [
      58,
      65,
      66,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 4800,
  },
  Object {
    "chord": Array [
      58,
      65,
      66,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 5120,
  },
  Object {
    "chord": Array [
      58,
      65,
      66,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 5440,
  },
  Object {
    "chord": Array [
      51,
      54,
      58,
    ],
    "chordName": "Ebm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 5760,
  },
  Object {
    "chord": Array [
      51,
      54,
      58,
    ],
    "chordName": "Ebm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 6080,
  },
  Object {
    "chord": Array [
      51,
      54,
      58,
    ],
    "chordName": "Ebm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 6400,
  },
  Object {
    "chord": Array [
      73,
      80,
      76,
      81,
    ],
    "chordName": "Dbm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 6720,
  },
  Object {
    "chord": Array [
      73,
      80,
      76,
      81,
    ],
    "chordName": "Dbm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 7040,
  },
  Object {
    "chord": Array [
      73,
      80,
      76,
      81,
    ],
    "chordName": "Dbm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 7360,
  },
]
`;
